# chip8

./: .gitignore  Cargo.toml  Makefile  README.md  Web.toml
.github/workflows/: release.yml
src/: bus.rs  bus.rs.old  cartridge.rs  constants.rs  cpu.rs  cpu.rs.old  display.rs  emulator.rs  emulator.rs.old  graphics.rs  lib.rs  main.rs  memory.rs  rom.rs  texture.rs.old
src/emulator/: games.rs  mod.rs
src/emulator/context/: mod.rs  sdl.rs
src/emulator/context/wasm/: dom.rs  mod.rs
src/emulator/machine/: bus.rs  cpu.rs  display.rs  keypad.rs  mod.rs
src/emulator/platform/: mod.rs  native.rs
src/emulator/platform/wasm/: dom.rs  js_interop.rs  mod.rs
src/wasm/: mod.rs
web/: index.html  next.config.js  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
web/components/: WASMMain.tsx
web/config/: paths.js  webpack.common.js
web/context/: WASM.tsx
web/hooks/: useMountEffectOnce.ts
web/pages/: _app.tsx  index.tsx
web/public/: index.html
web/src/: App.js  app.css  index.js
web/src/components/: Screen.js
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
