[package]
name = "chip8"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sdl"
path = "src/main.rs"

[features]
sdl = [
  "rand",
  "sdl2"
]

wasm = [
  "js-sys",
  "wasm-bindgen",
  "web-sys"
]

[dependencies]
rand = {version = "*", optional = true}
sdl2 = {version = "0.34.3", optional = true}
js-sys = {version = "0.3.57", optional = true}
wasm-bindgen = {version = "0.2.80", optional = true}
web-sys = {version = "0.3.55", optional = true, features = [
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'Node',
  'Document',
  'console',
]}
