[package]
name = "chip8"
version = "0.1.0"
description = "Chip8 emulator written in Rust"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sdl"
path = "src/main.rs"

[features]
sdl = ["sdl2"]
wasm = ["js-sys", "wasm-bindgen", "web-sys"]

[dependencies]
getrandom = {version = "0.2.2", features = ["js"]}
rand = {version = "*", features = ["getrandom"]}

sdl2 = {version = "0.34.3", optional = true, features = ["unsafe_textures"]}
js-sys = {version = "0.3.57", optional = true}
wasm-bindgen = {version = "0.2.80", optional = true}
web-sys = {version = "0.3.55", optional = true, features = [
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'Node',
  'Document',
  'console',
]}
