[package]
name = "chip8"
version = "0.4.0"
description = "Chip8 emulator written in Rust"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
required-features = ["sdl"]

[features]
sdl = ["sdl2"]
wasm = ["console_error_panic_hook", "js-sys", "wasm-bindgen", "web-sys"]

[dependencies]
cfg-if = {version = "0.1"}
getrandom = {version = "0.2.2", features = ["js"]}
lazy_static = {version = "1.4"}
rand = {version = "*", features = ["getrandom"]}

console_error_panic_hook = {version = "0.1", optional = true}
sdl2 = {version = "0.34.3", optional = true, default-features = false, features = ["unsafe_textures"]}
js-sys = {version = "0.3.57", optional = true}
wasm-bindgen = {version = "0.2.80", optional = true}
web-sys = {version = "0.3.55", optional = true, features = [
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlSelectElement',
  'Event',
  'EventTarget',
  'Window',
  'Attr',
  'DomTokenList',
  'KeyboardEvent',
  'Node',
  'Text',
  'Document',
  'console',
]}
